force-app/main/default/objects/FA_Lead_Time_Translation__c/FA_Lead_Time_Translation__c.object-meta.xml
<CustomObject>
    <label>FA_Lead Time Translation</label>
    <nameField>
        <label>FA_Lead Time Translation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FA_Lead Time Translation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>