force-app/main/default/objects/FA_Lead_Time_Translation__c/fields/Lead_Time_Item__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Item__c</fullName>
    <label>Lead Time Item No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>