force-app/main/default/objects/FA_Lead_Time_Translation__c/fields/Num1__c.field-meta.xml
<CustomField>
    <fullName>Num1__c</fullName>
    <label>Num1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>