force-app/main/default/objects/FA_Lead_Time_Translation__c/fields/TextOpp3__c.field-meta.xml
<CustomField>
    <fullName>TextOpp3__c</fullName>
    <label>TextOpp3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>