force-app/main/default/objects/FA_Lead_Time_Translation__c/fields/TextOpp5__c.field-meta.xml
<CustomField>
    <fullName>TextOpp5__c</fullName>
    <label>TextOpp5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>