force-app/main/default/objects/FA_Lead_Time_Translation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Time_Item__c</columns>
    <columns>Text1__c</columns>
    <columns>Text2__c</columns>
    <columns>Text3__c</columns>
    <columns>Text4__c</columns>
    <columns>Text5__c</columns>
    <columns>TextOpp1__c</columns>
    <columns>TextOpp2__c</columns>
    <columns>TextOpp3__c</columns>
    <columns>TextOpp4__c</columns>
    <columns>TextOpp5__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>